--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -7,6 +7,7 @@
 $secondary: #801515 !default;
 
 @import '~bootstrap/scss/bootstrap';
+@import 'modules/icons';
 
 .jumbotron {
     background-color: #B9210C;
@@ -26,4 +27,93 @@ $secondary: #801515 !default;
 {
     height: 330px !important;
     width: 100%;
+}
+
+body {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+    height: 100%;
+}
+
+.content{
+    flex: 1 0 auto;
+    -webkit-flex: 1 0 auto;
+    min-height: 200px;
+}
+
+#myFooter{
+    flex: 0 0 auto;
+    -webkit-flex: 0 0 auto;
+}
+
+#myFooter {
+    background-color: #373a48;
+    color:white;
+}
+
+#myFooter .footer-copyright{
+    background-color: #383737;
+    padding-top:3px;
+    padding-bottom:3px;
+    text-align: center;
+}
+
+#myFooter .footer-copyright p{
+    margin:10px;
+    color: #ccc;
+}
+
+#myFooter ul{
+    list-style-type: none;
+    padding-left: 0;
+    line-height: 1.7;
+
+}
+
+#myFooter h5{
+    font-size: 18px;
+    color: white;
+    font-weight: bold;
+    margin-top: 30px;
+}
+
+#myFooter a{
+    color:#d2d1d1;
+    text-decoration: none;
+}
+
+#myFooter a:hover, #myFooter a:focus{
+    text-decoration: none;
+    color:white;
+}
+
+#myFooter .myCols{
+    text-align: center;
+}
+
+#myFooter a:hover{
+    text-decoration: none;
+
+}
+
+#myFooter .social-facebook{
+    font-size: 20px;
+    color:#0077e2;
+}
+
+#myFooter .social-twitter{
+    font-size: 20px;
+    color: #00aced;
+}
+
+#myFooter .social-mail {
+    font-size: 20px;
+}
+
+@media screen and (max-width: 767px){
+    #myFooter {
+        text-align: center;
+    }
 }
