--- a/resources/sass/settings/_variables.scss
+++ b/resources/sass/settings/_variables.scss
@@ -18,3 +18,8 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+// Brand colors
+$brand-base:  #B9210C;
+$brand-brown: #56423D;
+$brand-grey: #BEA6A0;
