--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -70,7 +70,7 @@ body {
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
-  color: #212529;
+  color: #333333;
   text-align: left;
   background-color: #f5f7fb;
 }
@@ -1766,7 +1766,7 @@ pre code {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #212529;
+  color: #333333;
 }
 
 .table th,
@@ -1816,7 +1816,7 @@ pre code {
 }
 
 .table-hover tbody tr:hover {
-  color: #212529;
+  color: #333333;
   background-color: rgba(0, 0, 0, 0.075);
 }
 
@@ -2218,7 +2218,7 @@ select.form-control:focus::-ms-value {
   padding-bottom: 0.375rem;
   margin-bottom: 0;
   line-height: 1.6;
-  color: #212529;
+  color: #333333;
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0;
@@ -2685,7 +2685,7 @@ textarea.form-control.is-invalid {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #212529;
+  color: #333333;
   text-align: center;
   vertical-align: middle;
   -webkit-user-select: none;
@@ -2710,7 +2710,7 @@ textarea.form-control.is-invalid {
 }
 
 .btn:hover {
-  color: #212529;
+  color: #333333;
   text-decoration: none;
 }
 
@@ -3448,7 +3448,7 @@ input[type=button].btn-block {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 0.9rem;
-  color: #212529;
+  color: #333333;
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -5820,7 +5820,7 @@ a.badge-dark.focus {
 }
 
 .list-group-item-action:active {
-  color: #212529;
+  color: #333333;
   background-color: #e9ecef;
 }
 
@@ -6753,7 +6753,7 @@ a.close.disabled {
 
 .popover-body {
   padding: 0.5rem 0.75rem;
-  color: #212529;
+  color: #333333;
 }
 
 .carousel {
@@ -10958,7 +10958,7 @@ a.text-dark:focus {
 }
 
 .text-body {
-  color: #212529 !important;
+  color: #333333 !important;
 }
 
 .text-muted {
@@ -12176,10 +12176,48 @@ a.text-dark:focus {
   background-color: #B9210C;
   color: white;
   background-image: url(/images/banner.jpg?078bcba301dd8d019934ac714b2f4937);
-  background-position: 20px;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: auto 330px;
   height: 100vh;
+}
+
+.btn-submit {
+  color: #fff;
+  background-color: #e92a0f;
+  border-color: #e92a0f;
+}
+
+.btn-submit:hover {
+  color: #fff;
+  background-color: #c5230d;
+  border-color: #b9210c;
+}
+
+.btn-submit:focus,
+.btn-submit.focus {
+  box-shadow: 0 0 0 0.2rem rgba(236, 74, 51, 0.5);
+}
+
+.btn-submit.disabled,
+.btn-submit:disabled {
+  color: #fff;
+  background-color: #e92a0f;
+  border-color: #e92a0f;
+}
+
+.btn-submit:not(:disabled):not(.disabled):active,
+.btn-submit:not(:disabled):not(.disabled).active,
+.show > .btn-submit.dropdown-toggle {
+  color: #fff;
+  background-color: #b9210c;
+  border-color: #ad1f0b;
+}
+
+.btn-submit:not(:disabled):not(.disabled):active:focus,
+.btn-submit:not(:disabled):not(.disabled).active:focus,
+.show > .btn-submit.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(236, 74, 51, 0.5);
 }
 
 .breakline-hero {
@@ -12199,6 +12237,10 @@ body {
   -webkit-box-direction: normal;
           flex-direction: column;
   height: 100%;
+}
+
+.icon-contact {
+  color: #56423D;
 }
 
 .content {
