--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -21,7 +21,7 @@ $body-color: lighten(#000, 20%);
     height: 100vh;
 }
 
-.title-card {
+.title-card, .brand-title {
     color: $brand-base;
 }
 
