--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -54,6 +54,23 @@ a.title-card:hover, a.article-title:hover {
     @include button-variant(#8C8C8C, #8C8C8C);
 }
 
+.dropdown-item.active,
+.dropdown-item:active {
+    color: #000;
+    text-decoration: none;
+    background-color: #f8f9fa;
+}
+
+.dropdown-item:first-child {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.dropdown-item:last-child {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
 .breakline-hero {
     color: $white !important;
 }
